--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
+    "@react-three/cannon": "^5.1.0",
+    "@react-three/drei": "^9.0.1",
+    "@react-three/fiber": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "three": "^0.139.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.1"
   },
